--- a/PowerPlatformDemo/Src/Screen4.fx.yaml
+++ b/PowerPlatformDemo/Src/Screen4.fx.yaml
@@ -22,10 +22,10 @@ Screen4 As screen:
             DataField: ="crb87_name"
             Default: =ThisItem.Username
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@FormTables],DataSourceInfo.DisplayName,"crb87_name")
+            DisplayName: =DataSourceInfo([@FormTables],DataSourceInfo.DisplayName,crb87_name)
             Fill: =RGBA(0, 0, 0, 0)
             Height: =70
-            MaxLength: =DataSourceInfo([@FormTables], DataSourceInfo.MaxLength, "crb87_name")
+            MaxLength: =DataSourceInfo([@FormTables], DataSourceInfo.MaxLength, crb87_name)
             Required: =true
             Update: =DataCardValue1.Value
             Visible: =false
@@ -90,10 +90,10 @@ Screen4 As screen:
             DataField: ="crb87_email"
             Default: =ThisItem.Email
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@FormTables],DataSourceInfo.DisplayName,"crb87_email")
+            DisplayName: =DataSourceInfo([@FormTables],DataSourceInfo.DisplayName,crb87_email)
             Fill: =RGBA(0, 0, 0, 0)
             Height: =100
-            MaxLength: =DataSourceInfo([@FormTables], DataSourceInfo.MaxLength, "crb87_email")
+            MaxLength: =DataSourceInfo([@FormTables], DataSourceInfo.MaxLength, crb87_email)
             Required: =true
             Update: =DataCardValue2.Value
             Width: =767
@@ -157,10 +157,10 @@ Screen4 As screen:
             DataField: ="crb87_confirmemail"
             Default: =ThisItem.'Confirm Email'
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@FormTables],DataSourceInfo.DisplayName,"crb87_confirmemail")
+            DisplayName: =DataSourceInfo([@FormTables],DataSourceInfo.DisplayName,crb87_confirmemail)
             Fill: =RGBA(0, 0, 0, 0)
             Height: =100
-            MaxLength: =DataSourceInfo([@FormTables], DataSourceInfo.MaxLength, "crb87_confirmemail")
+            MaxLength: =DataSourceInfo([@FormTables], DataSourceInfo.MaxLength, crb87_confirmemail)
             Required: =true
             Update: =DataCardValue5.Value
             Width: =767
@@ -225,10 +225,10 @@ Screen4 As screen:
             DataField: ="crb87_newpassword"
             Default: =ThisItem.'New Password'
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@FormTables],DataSourceInfo.DisplayName,"crb87_newpassword")
+            DisplayName: =DataSourceInfo([@FormTables],DataSourceInfo.DisplayName,crb87_newpassword)
             Fill: =RGBA(0, 0, 0, 0)
             Height: =100
-            MaxLength: =DataSourceInfo([@FormTables], DataSourceInfo.MaxLength, "crb87_newpassword")
+            MaxLength: =DataSourceInfo([@FormTables], DataSourceInfo.MaxLength, crb87_newpassword)
             Required: =true
             Update: =DataCardValue6.Value
             Width: =767
@@ -292,10 +292,10 @@ Screen4 As screen:
             DataField: ="crb87_confirmnewpassword"
             Default: =ThisItem.'Confirm New Password'
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@FormTables],DataSourceInfo.DisplayName,"crb87_confirmnewpassword")
+            DisplayName: =DataSourceInfo([@FormTables],DataSourceInfo.DisplayName,crb87_confirmnewpassword)
             Fill: =RGBA(0, 0, 0, 0)
             Height: =100
-            MaxLength: =DataSourceInfo([@FormTables], DataSourceInfo.MaxLength, "crb87_confirmnewpassword")
+            MaxLength: =DataSourceInfo([@FormTables], DataSourceInfo.MaxLength, crb87_confirmnewpassword)
             Required: =true
             Update: =DataCardValue7.Value
             Width: =767
@@ -359,10 +359,10 @@ Screen4 As screen:
             DataField: ="crb87_securityquestion"
             Default: =ThisItem.'Security Question'
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@FormTables],DataSourceInfo.DisplayName,"crb87_securityquestion")
+            DisplayName: =DataSourceInfo([@FormTables],DataSourceInfo.DisplayName,crb87_securityquestion)
             Fill: =RGBA(0, 0, 0, 0)
             Height: =100
-            MaxLength: =DataSourceInfo([@FormTables], DataSourceInfo.MaxLength, "crb87_securityquestion")
+            MaxLength: =DataSourceInfo([@FormTables], DataSourceInfo.MaxLength, crb87_securityquestion)
             Required: =true
             Update: =DataCardValue8.Value
             Width: =767
